_dev.scss: Fix size of textarea because it's broken in FF.

--- a/src/scss/ia/_dev.scss
+++ b/src/scss/ia/_dev.scss
@@ -31,3 +31,9 @@ input[data-panel="metafields"] {
         vertical-align: super;
     }
 }
+
+#metafield_container {
+    textarea {
+        width: 24em;
+    }
+}
